<resources>
    <string name="app_name">Food Recipes</string>

    <!--  Navigation Graph  -->
    <string name="recipes">Recipes</string>
    <string name="favorite_recipes">Favorite</string>
    <string name="food_joke">Joke</string>
    <string name="details">Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="overview">Overview</string>
    <string name="instructions">Instructions</string>

    <!--  Bottom Sheet  -->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>

    <!--  Fragment Recipes  -->
    <string name="no_internet_connection">No Internet Connection.</string>

    <!--  Fragment Favorite Recipes  -->
    <string name="no_favorite_recipes">No Favorite Recipes.</string>

    <!--  Fragment Overview  -->
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>

    <!--  Fragment Food Joke  -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!--  Menu Recipes  -->
    <string name="search">Search</string>

    <!--  Menu Details  -->
    <string name="save_to_favorites">Save to Favorites</string>

    <!--  Menu Favorite contextual  -->
    <string name="delete_favorite_menu">Delete Favorite Menu</string>

    <!--  Menu Favorite Recipes  -->
    <string name="delete_all">Delete All</string>

    <!--  Menu Food Joke  -->
    <string name="share">Share</string>
</resources>