<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="kr.co.bepo.foodrecipes.ui.fragment.recipes.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes">

        <action
            android:id="@+id/action_recipesFragment_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />

        <argument
            android:name="backFromBottomSheet"
            android:defaultValue="false"
            app:argType="boolean" />

        <action
            android:id="@+id/action_recipesFragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />

    </fragment>

    <fragment
        android:id="@+id/favoriteRecipesFragment"
        android:name="kr.co.bepo.foodrecipes.ui.fragment.favorites.FavoriteRecipesFragment"
        android:label="@string/favorite_recipes"
        tools:layout="@layout/fragment_favorite_recipes" >

        <action
            android:id="@+id/action_favoriteRecipesFragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />

    </fragment>

    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="kr.co.bepo.foodrecipes.ui.fragment.foodjoke.FoodJokeFragment"
        android:label="@string/food_joke"
        tools:layout="@layout/fragment_food_joke" />

    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="kr.co.bepo.foodrecipes.ui.fragment.recipes.bottomsheet.RecipesBottomSheet"
        android:label="bottom_sheet_recipes"
        tools:layout="@layout/bottom_sheet_recipes">

        <action
            android:id="@+id/action_recipesBottomSheet_to_recipesFragment"
            app:destination="@id/recipesFragment"
            app:popUpTo="@id/recipesFragment"
            app:popUpToInclusive="true" />

    </dialog>

    <activity
        android:id="@+id/detailsActivity"
        android:name="kr.co.bepo.foodrecipes.ui.DetailsActivity"
        android:label="@string/details"
        tools:layout="@layout/activity_details">

        <argument
            android:name="result"
            app:argType="kr.co.bepo.foodrecipes.models.Result" />

    </activity>

</navigation>